--- a/website/loginPage.html
+++ b/website/loginPage.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="/static/styleLoginPage.css" />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
-        <script type="text/javascript" src="/static/login.js"></script>
+        <script type="text/javascript" src="/static/campaign.js"></script>
     </head>
     <body>
         <form id="login_form" class="form-4" method="POST">
