--- a/website/home.html
+++ b/website/home.html
@@ -3,11 +3,11 @@
 <html>
   <head>
 	  <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
-	  <script type="text/javascript">
-	    Parse.initialize("zJDkcisSASpMHkV9VCpEJFbkrO16eJv6g1i5UxjU", "NYTIqi6mJbKUr3AbR8JpofmqRfYpWOrz6shdngud");
-	  </script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+      <script type="text/javascript" src="/static/campaign.js"></script>
   </head>
   <body>
-  	  Hello world.
+      The list of your campaigns. <br>
+      <a href="/createCampaign">Create a campaign</a>
   </body>
 </html>
