--- a/website/viewCampaignPage.html
+++ b/website/viewCampaignPage.html
@@ -27,5 +27,6 @@
     <body>
         <span id="campaign_id" style="display:none;">{{query_string}}</span>
         <div id="campaign_info"></div>
+        <a href="/home">Return to home page.</a>
   </body>
 </html>
