--- a/website/home.html
+++ b/website/home.html
@@ -7,8 +7,16 @@
         <script type="text/javascript" src="/static/campaign.js"></script>
         <script type="text/javascript">
             $(function () {
-                Parse.initialize("zJDkcisSASpMHkV9VCpEJFbkrO16eJv6g1i5UxjU", "NYTIqi6mJbKUr3AbR8JpofmqRfYpWOrz6shdngud");
+
                 var user = Parse.User.current();
+
+                // Must be logged in
+                if(user) {
+                } else {
+                    window.open("/","_self");
+                }
+
+                Parse.initialize("zJDkcisSASpMHkV9VCpEJFbkrO16eJv6g1i5UxjU", "NYTIqi6mJbKUr3AbR8JpofmqRfYpWOrz6shdngud");
                 var relation = user.relation("campaigns");
 
                 var Campaign = Parse.Object.extend("Campaign");
