Changes home.html to myCampaignsPage.html. Also sorts the list campaigns by the date they were added, with most recent on top.

--- a/website/viewCampaignPage.html
+++ b/website/viewCampaignPage.html
@@ -35,6 +35,6 @@
     <body>
         <span id="campaign_id" style="display:none;">{{query_string}}</span>
         <div id="campaign_info"></div>
-        <a href="/home">Return to home page.</a>
+        <a href="/campaigns">See all campaigns.</a>
   </body>
 </html>
